// =============================================================
//  LoomStay - Schema Prisma PostgreSQL
//  Ne pas ajouter de champ priority dans Complaint.
// =============================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// =============================================================
//  ENUMS
// =============================================================

enum UserRole {
  ADMIN
  RECEPTIONIST
  MAINTENANCE_MANAGER
  HOUSEKEEPING_MANAGER
  EMPLOYEE
}

enum Department {
  RECEPTION
  MAINTENANCE
  HOUSEKEEPING
  RESTAURANT
  GENERAL
}

enum RoomStatus {
  AVAILABLE
  OCCUPIED
  CLEANING
  MAINTENANCE
}

enum ReservationStatus {
  PENDING
  CHECKED_IN
  CHECKED_OUT
  CANCELLED
}

enum ComplaintCategory {
  MAINTENANCE
  HOUSEKEEPING
  RECEPTION
  RESTAURANT
  COMPLAINT
  OTHER
}

enum ComplaintStatus {
  PENDING
  ASSIGNED
  IN_PROGRESS
  RESOLVED
  CONFIRMED
  NEEDS_REVIEW
  REOPENED
}

enum InterventionResult {
  FIXED
  NOT_FIXED
}

enum MessageSenderType {
  CLIENT
  STAFF
}

enum CheckinCompletionStatus {
  NOT_STARTED
  PARTIAL
  COMPLETED
}

enum TravelerType {
  ADULT
  CHILD
}

enum HousekeepingTaskStatus {
  PENDING
  ASSIGNED
  IN_PROGRESS
  COMPLETED
  NEEDS_REVIEW
  CANCELLED
}

enum HousekeepingTaskResult {
  DONE
  NOT_DONE
}

enum WorkerShift {
  MORNING   // 07:00 - 15:00
  EVENING   // 15:00 - 23:00
  NIGHT     // 23:00 - 07:00
  DAY_OFF
}

enum DailyCleaningStatus {
  ASSIGNED
  IN_PROGRESS
  DONE
  SKIPPED
}



// =============================================================
//  MODELS
// =============================================================

model User {
  id           String   @id @default(uuid())
  name         String
  email        String   @unique
  passwordHash String
  role         UserRole
  createdAt    DateTime @default(now())
  isActive     Boolean  @default(true)
  updatedAt    DateTime @updatedAt


  // Relations
  employeeProfile    EmployeeProfile?
  createdProfiles    EmployeeProfile[]   @relation("CreatedByAdmin")
  assignedComplaints Complaint[]         @relation("AssignedTo")
  assignerComplaints Complaint[]         @relation("AssignedBy")
  interventionLogs   InterventionLog[]
  sentMessages       InternalMessage[]   @relation("Sender")
  receivedMessages   InternalMessage[]   @relation("Receiver")
  guestStaffMessages GuestStaffMessage[] @relation("GuestStaffSender")
  createdEvents      HotelEvent[]        @relation("EventCreatedBy")
  auditLogs          AuditLog[]
  housekeepingTasksAssigned HousekeepingTask[] @relation("HkTaskAssignedTo")
  housekeepingTasksCreated  HousekeepingTask[] @relation("HkTaskAssignedBy")
  workerShifts              WorkerShiftSchedule[] @relation("ShiftWorker")
  managedShifts             WorkerShiftSchedule[] @relation("ShiftCreatedBy")
  dailyCleaningAssigned     DailyCleaningTask[] @relation("DailyCleaningWorker")
  dailyCleaningCreated      DailyCleaningTask[] @relation("DailyCleaningAssignedBy")

  @@map("users")
}

model EmployeeProfile {
  id           String     @id @default(uuid())
  userId       String     @unique
  department   Department
  isAvailable  Boolean    @default(true)
  lastSeenAt   DateTime?
  lastLoginAt  DateTime?
  lastLogoutAt DateTime?
  createdById  String?

  // Relations
  user      User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdBy User? @relation("CreatedByAdmin", fields: [createdById], references: [id], onDelete: SetNull)

  @@map("employee_profiles")
}

model Room {
  id              String     @id @default(uuid())
  roomNumber      String     @unique
  floor           Int
  type            String
  status          RoomStatus @default(AVAILABLE)
  workerQrVersion Int        @default(1)
  createdAt       DateTime   @default(now())
  updatedAt       DateTime   @updatedAt

  // Relations
  reservations       Reservation[]
  complaints         Complaint[]
  guestStaffMessages GuestStaffMessage[]
  interventionLogs   InterventionLog[]
  housekeepingTasks  HousekeepingTask[]
  dailyCleaningTasks DailyCleaningTask[] @relation("DailyCleaningRoom")

  @@map("rooms")
}


model Reservation {
  id                      String                  @id @default(uuid())
  reservationNumber       String                  @unique
  guestFirstName          String
  guestLastName           String
  guestEmail              String?
  guestPhone              String?
  nationality             String?
  checkInDate             DateTime
  checkOutDate            DateTime
  status                  ReservationStatus       @default(PENDING)
  roomId                  String?
  adultsCount             Int                     @default(1)
  childrenCount           Int                     @default(0)
  totalGuests             Int                     @default(1)
  checkinCompletionStatus CheckinCompletionStatus @default(NOT_STARTED)
  createdAt               DateTime                @default(now())
  updatedAt               DateTime                @updatedAt

  // Relations
  room               Room?               @relation(fields: [roomId], references: [id], onDelete: SetNull)
  guestForms         GuestForm[]
  complaints         Complaint[]
  guestStaffMessages GuestStaffMessage[]
  housekeepingTasks  HousekeepingTask[]

  @@map("reservations")
}

model GuestForm {
  id                String       @id @default(uuid())
  reservationId     String
  travelerIndex     Int
  travelerType      TravelerType @default(ADULT)
  isCompleted       Boolean      @default(false)
  fullName          String
  nationality       String
  passportEncrypted String?
  phone             String?
  address           String?
  submittedAt       DateTime     @default(now())

  // Relations
  reservation Reservation @relation(fields: [reservationId], references: [id], onDelete: Cascade)

  @@unique([reservationId, travelerIndex])
  @@map("guest_forms")
}

model Complaint {
  id                  String            @id @default(uuid())
  reservationId       String
  roomId              String
  originalMessage     String
  detectedLanguage    String?
  normalizedMessageEn String?
  staffMessage        String?
  category            ComplaintCategory
  status              ComplaintStatus   @default(PENDING)
  assignedToId        String?
  assignedById        String?
  createdAt           DateTime          @default(now())
  updatedAt           DateTime          @updatedAt
  resolvedAt          DateTime?
  confirmedAt         DateTime?
  reopenedAt          DateTime?
  needsReviewAt       DateTime?

  // Relations
  reservation      Reservation       @relation(fields: [reservationId], references: [id], onDelete: Cascade)
  room             Room              @relation(fields: [roomId], references: [id], onDelete: Cascade)
  assignedTo       User?             @relation("AssignedTo", fields: [assignedToId], references: [id], onDelete: SetNull)
  assignedBy       User?             @relation("AssignedBy", fields: [assignedById], references: [id], onDelete: SetNull)
  interventionLogs InterventionLog[]
  internalMessages InternalMessage[]

  @@map("complaints")
}

model InterventionLog {
  id              String              @id @default(uuid())
  complaintId     String
  employeeId      String
  roomId          String
  entryTime       DateTime?
  exitTime        DateTime?
  result          InterventionResult?
  employeeComment String?
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt

  // Relations
  complaint Complaint @relation(fields: [complaintId], references: [id], onDelete: Cascade)
  employee  User      @relation(fields: [employeeId], references: [id], onDelete: Cascade)
  room      Room      @relation(fields: [roomId], references: [id], onDelete: Cascade)

  @@map("intervention_logs")
}

model InternalMessage {
  id          String    @id @default(uuid())
  complaintId String
  senderId    String
  receiverId  String
  message     String
  createdAt   DateTime  @default(now())
  readAt      DateTime?

  // Relations
  complaint Complaint @relation(fields: [complaintId], references: [id], onDelete: Cascade)
  sender    User      @relation("Sender", fields: [senderId], references: [id], onDelete: Cascade)
  receiver  User      @relation("Receiver", fields: [receiverId], references: [id], onDelete: Cascade)

  @@map("internal_messages")
}

model HotelInfo {
  id        String   @id @default(uuid())
  title     String
  content   String
  type      String
  updatedAt DateTime @updatedAt

  @@map("hotel_infos")
}

model CurrencyRate {
  id        String   @id @default(uuid())
  currency  String   @unique
  rateToTnd Float
  updatedAt DateTime @updatedAt

  @@map("currency_rates")
}

model AuditLog {
  id        String   @id @default(uuid())
  actorId   String?
  action    String
  entity    String
  entityId  String?
  metadata  Json?
  createdAt DateTime @default(now())

  // Relations
  actor User? @relation(fields: [actorId], references: [id], onDelete: SetNull)

  @@map("audit_logs")
}

model GuestStaffMessage {
  id               String            @id @default(uuid())
  reservationId    String
  roomId           String
  senderType       MessageSenderType
  senderUserId     String?
  originalMessage  String
  detectedLanguage String?
  staffMessage     String
  clientMessage    String
  createdAt        DateTime          @default(now())
  readAt           DateTime?

  // Relations
  reservation Reservation @relation(fields: [reservationId], references: [id], onDelete: Cascade)
  room        Room        @relation(fields: [roomId], references: [id], onDelete: Cascade)
  senderUser  User?       @relation("GuestStaffSender", fields: [senderUserId], references: [id], onDelete: SetNull)

  @@map("guest_staff_messages")
}

model HotelEvent {
  id          String   @id @default(uuid())
  title       String
  description String
  eventDate   DateTime
  imageUrl    String?
  imagePath   String?
  isPublished Boolean  @default(false)
  createdById String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  // Relations
  createdBy User @relation("EventCreatedBy", fields: [createdById], references: [id], onDelete: Cascade)

  @@map("hotel_events")
}

model HousekeepingTask {
  id             String                  @id @default(uuid())
  roomId         String
  reservationId  String?
  assignedToId   String
  assignedById   String
  note           String?
  status         HousekeepingTaskStatus  @default(ASSIGNED)
  entryTime      DateTime?
  exitTime       DateTime?
  result         HousekeepingTaskResult?
  workerComment  String?
  createdAt      DateTime                @default(now())
  updatedAt      DateTime                @updatedAt

  // Relations
  room        Room         @relation(fields: [roomId], references: [id], onDelete: Cascade)
  reservation Reservation? @relation(fields: [reservationId], references: [id], onDelete: SetNull)
  assignedTo  User         @relation("HkTaskAssignedTo", fields: [assignedToId], references: [id], onDelete: Cascade)
  assignedBy  User         @relation("HkTaskAssignedBy", fields: [assignedById], references: [id], onDelete: Cascade)

  @@map("housekeeping_tasks")
}

/// Worker shift schedule — one record per worker per business day.
/// businessDay is stored as midnight UTC of that calendar day.
model WorkerShiftSchedule {
  id          String      @id @default(uuid())
  workerId    String
  businessDay DateTime    // midnight UTC of the calendar business day
  shift       WorkerShift
  createdById String
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  worker      User        @relation("ShiftWorker", fields: [workerId], references: [id], onDelete: Cascade)
  createdBy   User        @relation("ShiftCreatedBy", fields: [createdById], references: [id], onDelete: Cascade)

  @@unique([workerId, businessDay])
  @@map("worker_shift_schedules")
}

/// Daily cleaning task — one task per room per worker per day.
/// Separate from complaint-based HousekeepingTask.
model DailyCleaningTask {
  id           String              @id @default(uuid())
  roomId       String
  workerId     String
  businessDay  DateTime            // midnight UTC of calendar business day
  status       DailyCleaningStatus @default(ASSIGNED)
  note         String?
  assignedById String
  startedAt    DateTime?
  completedAt  DateTime?
  createdAt    DateTime            @default(now())
  updatedAt    DateTime            @updatedAt

  room         Room                @relation("DailyCleaningRoom", fields: [roomId], references: [id], onDelete: Cascade)
  worker       User                @relation("DailyCleaningWorker", fields: [workerId], references: [id], onDelete: Cascade)
  assignedBy   User                @relation("DailyCleaningAssignedBy", fields: [assignedById], references: [id], onDelete: Cascade)

  @@map("daily_cleaning_tasks")
}
